styles.css
/* Overall page styling */
body,
html {
    height: 100%;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    color: #f0f0f0;
    background: #000000;
}

/* Common font styles */
h1,
h2,
.hero-content h1,
#contact h2 {
    font-weight: 700;
    color: #f0f0f0;
}

p,
.contact-info,
.contact-form input,
.contact-form textarea {
    font-size: 1.2em;
    line-height: 1.6em;
    color: #f0f0f0;
}


/* Header Styling */
.header {
    position: relative;
    background: url('https://thrivenextgen.com/wp-content/uploads/AdobeStock_162765779_45-scaled.webp') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 80vh;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}


.header::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: 1;
    /* Add this line */
}


.header-content {
    position: relative;
    z-index: 2;
    /* Add this line */
}


.header-content h1 {
    font-size: 3em;
    font-weight: 700;
    color: #f0f0f0;
}

/* Navigation Bar Styling */
.navbar {
    background: #212121 !important;
}

.navbar .navbar-brand,
.navbar .nav-link,
.nav-item.active .nav-link {
    color: #f0f0f0 !important;
}

/* Main content styling */
.container {
    padding: 2em 0;
}

.hero {
    text-align: center;
    margin-bottom: 3em;
}

.hero-content h1 {
    font-size: 2.5em;
}

#about {
    margin-bottom: 3em;
}

#about img {
    max-width: 100%;
}

#about h2 {
    font-size: 2em;
    margin-bottom: 1em;
}

/* Footer */
.bg-light {
    background-color: #000000 !important;
}

footer p {
    color: #f0f0f0 !important;
}

/* Contact Section Styling */
#contact {
    padding-top: 100px;
    padding-bottom: 2em;
    margin-bottom: 3em;
}

#contact h2 {
    font-size: 2em;
    margin-bottom: 1em;
}

.contact-info a {
    color: #f0f0f0;
    text-decoration: none;
}

.contact-form {
    max-width: 600px;
    margin: auto;
}

.contact-form input,
.contact-form textarea {
    width: 100%;
    padding: 1em;
    margin-bottom: 1em;
    border: 1px solid #f0f0f0;
    background: transparent;
}

.contact-form button {
    padding: 1em 2em;
    background: #212121;
    border: none;
    font-size: 1.2em;
    cursor: pointer;
    transition: background 0.3s ease;
}

.contact-form button:hover {
    background: #f0f0f0;
    color: #212121;
}

/* Media Queries for Responsiveness */
@media (max-width: 768px) {

    .header-content h1,
    .hero-content h1,
    #contact h2,
    #about h2 {
        font-size: 2em;
    }

    .contact-form {
        padding: 0 15px;
    }
}

